# web3cache-rust

./: README.md
web3cache-controller/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  deny.toml  kube.conf
web3cache-controller/.github/workflows/: push_and_deploy.yaml
web3cache-controller/deployment/dev/: deployment.yaml  secret-mapping.yaml
web3cache-controller/deployment/prod/: account.yaml  deployment.yaml  secret-mapping.yaml
web3cache-controller/deployment/stage/: deployment.yaml  secret-mapping.yaml  service.yaml
web3cache-controller/deployments/: deployment.json  web3cachewrite-template.yaml  web3cachewrite-test_id.yaml
web3cache-controller/src/: database.rs  helper_functions.rs  integration_tests.rs  main.rs  routes.rs
web3cache-dispatcher/: Cargo.toml  Dockerfile  Dockerfile.dev  README.md
web3cache-dispatcher/.github/workflows/: push_and_deploy.yaml
web3cache-dispatcher/deployment/dev/: deployment.yaml  secrets-mapping.yaml  service.yaml
web3cache-dispatcher/deployment/prod/: deployment.yaml  secrets-mapping.yaml
web3cache-dispatcher/deployment/stage/: deployment.yaml  secrets-mapping.yaml
web3cache-dispatcher/my-workspace-hack/: Cargo.toml
web3cache-dispatcher/web3cache/: Cargo.toml
web3cache-dispatcher/web3cache/src/: consumer_api.rs  database.rs  dispatcher.rs  helper_functions.rs  lib.rs  main.rs
web3cache-dispatcher/web3cache/tests/: consumer_api_tests.rs  database_tests.rs  dispatcher_tests.rs  helper_functions_tests.rs
web3cache-events/: .dockerignore  .gitignore  README.md  auth.ts  package.json
web3cache-events/config/: custom-environment-variables.json  default.json
web3cache-events/src/api/: ClientsServer.ts  ConsumerServer.ts  ContractRegistration.ts  Dispatcher.ts  PartnersServer.ts  chains.js
web3cache-events/src/interface/: apikey.ts  logs.ts  metrics.ts  subscription.ts  transaction.ts
web3cache-events/src/middleware/: metrics.ts  validateJoi.ts
web3cache-events/src/models/: apikey.ts  logs.ts  metrics.ts  moveTransaction.ts  subscription.ts
web3cache-events/src/server/: error.ts  logging.ts  server.test.js  server.ts
web3cache-events/src/test/: client.ts  kafkaProducer.ts  mockPartner.ts  stressTest.ts
web3cache-graphql/: Dockerfile  package-lock.json  package.json  tsconfig.json
web3cache-graphql/config/: custom-environment-variables.json  default.json
web3cache-graphql/src/: main.ts
web3cache-graphql/src/datasources/: contract-registration-api.ts  webhook-contract-api.ts
web3cache-graphql/src/resolvers/: webhook-resolver.ts
web3cache-graphql/src/schemas/: contract-registration.graphql  webhook.graphql
web3cache-ipfs/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md
web3cache-ipfs/k8s/: local-machine-port.yaml  web3cacheipfs-cluster-ip-service.yaml  web3cacheipfs-deployment.yaml  web3cacheipfs-persistent-volume-claim.yaml
web3cache-ipfs/src/: main.rs
web3cache-read/: Cargo.toml  Dockerfile  Dockerfile.dev  README.md
web3cache-read/.github/workflows/: push_and_deploy.yaml
web3cache-read/deployment/dev/: deployment.yaml  ingress.yaml  secrets-mapping.yaml
web3cache-read/deployment/prod/: deployment.yaml  ingress.yaml  secrets-mapping.yaml
web3cache-read/deployment/stage/: deployment.yaml  ingress.yaml  secrets-mapping.yaml  service.yaml
web3cache-read/web3cache/: Cargo.toml
web3cache-read/web3cache/src/: database.rs  helper_functions.rs  lib.rs  main.rs
web3cache-read/web3cache/tests/: database_tests.rs  integration_tests.rs  unit_tests.rs
web3cache-realtime/: Dockerfile  README.md  package-lock.json  package.json
web3cache-realtime/.github/workflows/: push_and_deploy.yaml
web3cache-realtime/config/: custom-environment-variables.json  default.json
web3cache-realtime/src/api/: ClientsServer.ts  InternalServer.ts
web3cache-realtime/src/models/: moveTransaction.ts
web3cache-realtime/src/server/: logging.ts  server.ts
web3cache-realtime/src/test/: client.ts
web3cache-subscriptions/: .gitignore  Dockerfile  Dockerfile.dev  README.md  deny.toml  rustfmt.toml
web3cache-subscriptions/.github/workflows/: push_and_deploy.yml
web3cache-subscriptions/deployment/dev/: deployment.yaml  (+2 more)
web3cache-subscriptions/my-workspace-hack/: Cargo.toml
web3cache-subscriptions/web3cache/: Cargo.toml
web3cache-subscriptions/web3cache/files/: chains.json
web3cache-subscriptions/web3cache/src/: contract_registration_lib.rs  database.rs  helper_functions.rs  lib.rs  logging.rs  main.rs  subscription_api.rs
web3cache-subscriptions/web3cache/tests/: integration_tests.rs  unit_tests.rs
(+4 files in other folders)
