[package]
name = "web3cache"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "web3cache"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.9"
log = "0.4"
mongodb = "2.2.2"
tokio = "1.26.0"
futures = "0.3.21"
actix-files = "0.6.1"
actix-http = "3.1.0"
actix-service = "2.0.2"
actix-web = "4.1.0"
serde = "1.0.141"
serde_json = "1.0.83"
async-std = "1.12.0"
kube = "0.80.0"
k8s-openapi = { version = "0.17.0", features = ["v1_22"] }
anyhow = "1.0.69"
lazy_static = "1.4.0"
async-process = "1.6.0"
