[package]
name = "web3cache"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "web3cache"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
dotenv = "0.15.0"
env_logger = "0.9"
log = "0.4"
mongodb = "2.2.2"
tokio = "1.19.2"
futures = "0.3.21"
actix-files = "0.6.1"
actix-http = "3.1.0"
actix-service = "2.0.2"
actix-web = "4.1.0"
serde = "1.0.141"
serde_json = "1.0.83"
my-workspace-hack = { version = "0.1", path = "../my-workspace-hack" }

[profile.dev]
debug = true
