[package]
name = "web3cache"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "web3cache"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
dotenv = "0.15.0"
env_logger = "0.9"
log = "0.4"
mongodb = "2.2.0"
tokio = "1.19.2"
futures = "0.3.21"
actix-files = "0.6.1"
actix-http = "3.1.0"
actix-service = "2.0.2"
actix-web = "4.1.0"
serde = "1.0.141"
serde_json = "1.0.83"
snailquote = "0.3.1"
actix = "0.13.0"
validator = { version = "0.15", features = ["derive"] }
bson = { version = "2.4.0", features = ["chrono-0_4"] }
reqwest = { version = "0.11.13", features = ["json"] }
async-trait = "0.1.58"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
jwt = "0.16.0"
sha2 = "0.10.6"
hmac = "0.12.1"
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
futures-util = "0.3.25"
futures-channel = "0.3.25"
regex = "1.7.0"
url = { version = "2", features = ["serde"] }
my-workspace-hack = { version = "0.1", path = "../my-workspace-hack" }
lazy_static = "1.4.0"
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[features]
exclude_logs_from_coverage = []

[dev-dependencies]
wiremock = "0.5.18"
